# ss-light

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml
.github/workflows/: docker-publish.yml
scripts/: download_plugins.sh
src/: consts.rs  handshake.rs  lib.rs  udprelay.rs  util.rs
src/crypto/: aead.rs  kind.rs  mod.rs  packet.rs  stream.rs  util.rs
src/plugin/: mod.rs
