[package]
name = "ss-light"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A lightweight shadowsocks implementation."
repository = "https://github.com/kirito41dd/ss-ligh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
tracing-appender = "0.2.2"
ring = "0.16.20"
md-5 = "0.10.1"
bytes = "1.1.0"
futures = "0.3.21"
lazy_static = "1.4.0"
rand = "0.8.5"
pin-project = "1.0.10"
thiserror = "1.0.30"
clap = "3.1.6"
toml = "0.5.8"
serde = { version = "1.0.136", features = ["derive"] }
anyhow = "1.0.56"
derivative = "2.2.0"
lru_time_cache = "0.11.11"
